cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificExprsCheckIgnoreAnnos.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  -------------------------------
  (1/1) A string literal is used.
  -------------------------------
   * In constant "c":
     - const string c = "const";
                        ^
